--- a/.github/workflows/gh-deploy.yml
+++ b/.github/workflows/gh-deploy.yml
@@ -37,11 +37,14 @@ jobs:
           NEXT_PUBLIC_TEMPLATE_ID: template_w2hkff3
           NEXT_PUBLIC_USER_ID: nRClxwHPLT_mRBrRW
 
-      - name: Export Static Files 🎪
+      - name: Exporting Bundle Files 🎪
         run: yarn export
+        working-directory: forkmemaybe-portfolio
 
       - name: Ensure .nojekyll is present
-        run: touch forkmemaybe-portfolio/out/.nojekyll
+        run: touch out/.nojekyll
+        working-directory: forkmemaybe-portfolio
+
 
       - name: Deploy to GitHub Pages 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.5
