--- a/.github/workflows/gh-deploy.yml
+++ b/.github/workflows/gh-deploy.yml
@@ -28,6 +28,11 @@ jobs:
           yarn build
           yarn export
           touch out/.nojekyll
+        env:
+          NEXT_PUBLIC_TRACKING_ID: G-8FBXBFXC10
+          NEXT_PUBLIC_SERVICE_ID: service_qikussl
+          NEXT_PUBLIC_TEMPLATE_ID: template_w2hkff3
+          NEXT_PUBLIC_USER_ID: nRClxwHPLT_mRBrRW
 
       - name: Deploy to GitHub Pages 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.5
